# FP-Final-Project

./: .gitignore  LICENSE  README.md  dune
docs/: development.puml  feature_order.md  process.puml  scenario.puml
docs/puml/: physical.puml  process.puml
src/: cards.json  client.ml  country.ml  country.mli  default_scenario.json  dune  game.ml  game.mli  gamestate.mli  lib.mli  main.ml  resolution.ml  resolution.mli  resolution_legacy.ml  scenario.mli  server.ml  server.mli  table.ml  table.mli
tests/: dune  game_tests.ml  server_tests.ml  table_tests.ml  test_cards.json  test_country.json  tests.ml
tests/data/: countries.json  domestic_cards.json  international_cards.json
tests/data/player_decks/: prc_cards.json  us_cards.json
