(library
 (name country)
 (modules country)
 (libraries core)
 (preprocess (pps ppx_jane ppx_deriving_yojson)))

(library
 (name game)
 (modules game)
 ; (modules_without_implementation game)
 (libraries core country)
 (preprocess (pps ppx_jane ppx_deriving_yojson)))

(library
 (name gamestate)
 (modules gamestate)
 (modules_without_implementation gamestate)
 (libraries core game))

(executable
 (name server)
 (modules server)
 (libraries core async lwt lwt.unix))

(executable
 (name client)
 (modules client)
 (libraries core async lwt lwt.unix))