(library
 (name country)
 (modules country)
 (libraries core)
 (preprocess (pps ppx_jane ppx_deriving_yojson)))

; (library
;  (name game)
;  (modules game)
;  (modules_without_implementation game)
;  (libraries core country))

; (library
;  (name gamestate)
;  (modules gamestate)
;  (modules_without_implementation gamestate)
;  (libraries core game))

(library
 (name game)
 (modules game)
 (modules_without_implementation game)
 (libraries core country)
 (preprocess (pps ppx_jane ppx_deriving_yojson)))

(library
 (name gamestate)
 (modules gamestate)
 (modules_without_implementation gamestate)
 (libraries core game))

(library
 (name server)
 (modules server)
 (libraries core core_unix core_unix.command_unix async lwt lwt.unix)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(executable
 (name main)
 (modules main)
 (libraries core server))