; (library
;  (name cord)
;  (modules cord)
;  (libraries core)
;  (preprocess (pps ppx_jane)))

(library
 (name resolution)
 (modules resolution)
 (libraries core)
 (preprocess (pps ppx_jane)))

(library
 (name country)
 (modules country)
 (libraries core resolution)
 (preprocess (pps ppx_jane ppx_deriving_yojson)))

(library
 (name game)
 (modules game)
 (libraries core country resolution core_unix core_unix.sys_unix)
 (preprocess (pps ppx_jane ppx_deriving_yojson)))

(library
 (name gamestate)
 (modules gamestate)
 (modules_without_implementation gamestate)
 (libraries core game))

(library
 (name server)
 (modules server)
 (libraries core core_unix core_unix.command_unix async lwt lwt.unix)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(executable
 (name main)
 (modules main)
 (libraries core server))